--- a/css/style.css
+++ b/css/style.css
@@ -450,7 +450,12 @@ body {
 		font-size: 80px;
 		color: white;
 	}
-
+	
+@media (max-width: 767px) {
+	#slide-4 .col-6 {
+		width: 100%;
+	}
+}
 
 #slide-5 {
 	background-color: #f39c12;
