--- a/css/style.css
+++ b/css/style.css
@@ -633,3 +633,60 @@ body {
 .navigation-slide {
 	cursor: pointer;
 }
+
+.social {
+-moz-border-radius:3px;
+-moz-box-shadow:0 1px 0 #e9e9e9 inset;
+-webkit-border-radius:3px;
+-webkit-box-shadow:0 1px 0 #e9e9e9 inset;
+background:#f3f3f3;
+border-color:#d1d1d1 #e7e7e7 #e4e4e4;
+border-radius:3px;
+border-style:solid;
+border-width:1px;
+box-shadow:0 1px 0 #e9e9e9 inset;
+float:right;
+list-style:none;
+padding: 15px 10px;
+position:fixed;
+right:0px;
+top:30px;
+text-align:center;
+margin:20px;
+z-index: 1040;
+}
+
+.social li:first-child {
+margin-top:0;
+}
+
+.social li {
+margin-top:10px;
+}
+
+.social li a {
+display: block;
+background: #999999;
+color: #efefef;
+border-radius: 15px;
+text-decoration: none;
+line-height: 30px;
+width: 30px;  
+font-size: 18px;
+}
+
+.social a.tw:hover {
+  background: #00acee;
+}
+
+.social a.fb:hover {
+  background: #3b5998;
+}
+
+.social a.gp:hover {
+  background: #dd4b39;
+}
+
+.social i {
+	font-size: 20px;
+}
