--- a/css/style.css
+++ b/css/style.css
@@ -649,7 +649,7 @@ float:right;
 list-style:none;
 padding: 15px 10px;
 position:fixed;
-right:0px;
+right:-25px;
 top:30px;
 text-align:center;
 margin:20px;
@@ -666,7 +666,7 @@ z-index: 1040;
 		margin: 0px;
 		top:0px;
 		left:0px;
-		width:120px;
+		width:170px;
 		height: 50px;
 
 	}
@@ -713,7 +713,12 @@ font-size: 18px;
 .social a.gp:hover {
   background: #dd4b39;
 }
-
+.social a.li:hover {
+  background: #069;
+}
+.social a.pt:hover {
+  background: #dd4b39;
+}
 .social i {
 	font-size: 20px;
 }
